# manipulator_tutorial

./: .env  .gitignore  README.md
ws/.cache/clangd/index/: add_two_ints.hpp.CDA0A593E3415037.idx  add_two_ints__builder.hpp.A340ADB0E0212A97.idx  add_two_ints__struct.hpp.CC845A555986C719.idx  add_two_ints__traits.hpp.DAC193F99626BA12.idx  angle_conversion.cpp.D0AC4891DB67F60A.idx  euler_to_quaternion.hpp.32C57AD1E4DE1797.idx  euler_to_quaternion__builder.hpp.B78ED38A3BF86361.idx  euler_to_quaternion__struct.hpp.CB4D1E2AD1691DC7.idx  euler_to_quaternion__traits.hpp.EB3EA4B3BB0061D8.idx  fibonacci.hpp.7F965C2AE2BA1A83.idx  fibonacci__builder.hpp.AFA72C204D9762B4.idx  fibonacci__struct.hpp.9FBDAB3B7F808ECE.idx  fibonacci__traits.hpp.04ADDA2226E174CF.idx  quaternion_to_euler.hpp.40C5259A192A469A.idx  quaternion_to_euler__builder.hpp.452AB9A84F497812.idx  quaternion_to_euler__struct.hpp.9325DE1A7B6D5DF5.idx  quaternion_to_euler__traits.hpp.BC9CE804670A70E3.idx  robot_task.hpp.C2362830AE22E9BB.idx  robot_task__builder.hpp.250F962EB813D2B6.idx  robot_task__struct.hpp.FE83431B1D3C105A.idx  robot_task__traits.hpp.DE8A9EFCCD20B346.idx  simple_action_client.cpp.3B46B2BDAC93465F.idx  simple_moveit_Interface.cpp.DBED057060EF55FE.idx  simple_parameter.cpp.08ECEA56A3475CFD.idx  simple_serial_receiver.cpp.F2E2074D93CD26B3.idx  simple_serial_transmitter.cpp.6B5450500AEE1429.idx  simple_server_action.cpp.9B66A741C4DE89EC.idx  simple_services_client.cpp.EC9B906286E57B0C.idx  simple_services_server.cpp.A4F7D634E01F6FCA.idx  task_server.cpp.1DD0FE6956F11CFC.idx
ws/src/bot_controller/: CMakeLists.txt  bot_controller.xml  package.xml
ws/src/bot_controller/config/: bot_controllers.yaml
ws/src/bot_controller/launch/: controller.launch.py
ws/src/bot_controller/src/: bot_interface.cpp
ws/src/cpp_example/: CMakeLists.txt  package.xml
ws/src/cpp_example/src/: simple_action_client.cpp  simple_lifecycle_node.cpp  simple_moveit_Interface.cpp  simple_parameter.cpp  simple_server_action.cpp  simple_services_client.cpp  simple_services_server.cpp
ws/src/py_example/: package.xml  setup.py
ws/src/py_example/launch/: simple_movit_interface.launch.py
ws/src/py_example/py_example/: simple_action_client.py  simple_action_server.py  simple_lifecycle_node.py  simple_moveit_interface.py  simple_services_client.py  simple_services_server.py  single_parameter.py
ws/src/robot_bringup/launch/: real_bot.launch.py  simulated_bot.launch.py
ws/src/robot_description/: CMakeLists.txt  package.xml
ws/src/robot_description/launch/: gazebo.launch.py  rviz2.launch.py
ws/src/robot_description/meshes/: pi_camera.STL:Zone.Identifier
ws/src/robot_description/rviz/: display.rviz
ws/src/robot_description/urdf/: bot.urdf.xacro  bot_gazebo.xacro  bot_ros2_control.xacro
ws/src/robot_firmware/: CMakeLists.txt  package.xml
ws/src/robot_firmware/robot_firmware/: simple_serial_receiver.py  simple_serial_transmitter.py
ws/src/robot_firmware/src/: simple_serial_receiver.cpp  simple_serial_transmitter.cpp
ws/src/robot_moveit/: CMakeLists.txt  package.xml
ws/src/robot_moveit/config/: moveit.rviz  moveit_controllers.yaml  planning_python_api.yaml  robot.srdf
ws/src/robot_moveit/launch/: moveit.launch.py
ws/src/robot_msgs/: CMakeLists.txt  package.xml
ws/src/robot_msgs/action/: RobotTask.action
ws/src/robot_remote/: CMakeLists.txt  package.xml
ws/src/robot_remote/robot_remote/: task_server.py
ws/src/robot_remote/src/: task_server.cpp
ws/src/robot_utils/: CMakeLists.txt  package.xml
ws/src/robot_utils/robot_utils/: angle_conversion.py
ws/src/robot_utils/src/: angle_conversion.cpp
(+2 files in other folders)
